--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         siendo la programación una de sus áreas más destacadas.
       </p>
       <div class="center">
-        <img src="avatar1.jpg" width="340" alt="Foto de la Doctora Erika">
+        <img src="avatar.jpg" width="340" alt="Foto de la Doctora Erika">
       </div>
       <p><strong>Puesto actual:</strong> Profesora - Investigadora</p>
       <p><strong>Máximo grado de estudio:</strong> Doctorado</p>
